@@ -1,7 +1,5 @@
 # Ignore libxml2 while we're currently using the included distribution version before upgrading to newer
 HydraIRC/libs/libxml2/*
-# Ignore libxml2-old folder, where we save the previous version of libxml
-HydraIRC/libs/libxml2-old/*
 # Ignore VS Autogenerated Files
 *.ipch
 *.opensdf
