@@ -92,8 +92,8 @@ END
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 0,3,168,0
- PRODUCTVERSION 0,3,168,0
+ FILEVERSION 0,3,169,0
+ PRODUCTVERSION 0,3,169,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -111,12 +111,12 @@ BEGIN
             VALUE "Comments", "http://www.HydraIRC.com"
             VALUE "CompanyName", "Hydra Productions"
             VALUE "FileDescription", "HydraIRC"
-            VALUE "FileVersion", "0, 3, 168, 0"
+            VALUE "FileVersion", "0, 3, 169, 0"
             VALUE "InternalName", "HydraIRC"
             VALUE "LegalCopyright", "Dominic Clifton - Copyright 2002-2022"
             VALUE "OriginalFilename", "HydraIRC.exe"
             VALUE "ProductName", "HydraIRC"
-            VALUE "ProductVersion", "0.3.168.0"
+            VALUE "ProductVersion", "0.3.169.0"
         END
     END
     BLOCK "VarFileInfo"
